♻️ Refactor: CORS 정책 변경
* :gear: Settings: SecurityFilter에 actuator/health permitAll 추가

* :wrench: Settings: JwtProperties 추가

* :recycle: Refactor: 추가한 환경변수를 적용한 쿠키 응답 방식 변경

* :sparkles: Feat: 임의의 이메일 인증 처리 메서드 추가

* :sparkles: Feat: 임의의 메일 인증 처리 API 추가

* :wrench: Settings: cookie secure, same-site 설정 추가

* :recycle: Refactor: setAllowCredentials true를 통한 자격증명 요청 허용, OPTIONS 허용을 통한 프리플라이트 허용, 헤더 전체 허용