@@ -4,6 +4,7 @@
 package com.skunivlikelion.homepage.global.config;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -26,10 +27,12 @@ public class CorsConfig {
 
     // 환경 변수에 정의된 출처만 허용
     configuration.setAllowedOrigins(Arrays.asList(corsProperties.getAllowedOrigins()));
+    configuration.setAllowCredentials(true);
     // 리스트에 작성한 HTTP 메소드 요청만 허용
-    configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH"));
+    configuration.setAllowedMethods(
+        Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
     // 리스트에 작성한 헤더들이 포함된 요청만 허용
-    configuration.setAllowedHeaders(Arrays.asList("Content-Type", "X-Requested-With"));
+    configuration.setAllowedHeaders(List.of("*"));
     // 모든 경로에 대해 위의 CORS 설정을 적용
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
     source.registerCorsConfiguration("/**", configuration);
